# Cryo-Transistor-ML

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  GOAL.md  README.md  pyproject.toml  requirements.txt
data/processed/: devices.csv
data/processed/pdk77k/: sky130_77k.lib.spice  sky130_fd_pr__nfet_01v8_lvt__tt_77k.corner.spice  sky130_fd_pr__pfet_01v8_lvt__tt_77k.corner.spice
docs/: CODEX_RESEARCH_LOG.md  HANDOFF.md  METHODS.md  RESEARCH_LOG.md
scripts/: compare_ng_versions.py  direct_mlp_fd_study.py  export_ml_cards.py  fd_parameter_study.py  floored_comparison.py  forward_compare.py  high_voltage_guarded_study.py  make_fd_deploy.py  make_figs.py  make_ml_variants.py  make_paper_tables.py  make_scaling_fig.py  make_simple_slides.py  make_slide_plots.py  make_slides.py  pdk_baseline.py  pdk_cma_extract.py  pdk_compare.py  pdk_direct_mlp.py  pdk_fd_extract.py  pdk_forward_direct.py  pdk_foundation_emulator.py  pdk_gen_data.py  pdk_ml_active.py  pdk_ml_direct.py  pdk_ml_extract.py  pdk_mlp_tandem.py  per_bias_diagnostic.py  run_forward_direct.sh  run_tandem_seeds.sh  scaling_study.py  setup_data.py  tandem_ensemble.py  verify_dl_no_cherry_pick.py  verify_simulator.py
src/cryoml/: __init__.py  config.py  data_io.py  devices.py  metrics.py  paper_data.py  pdk_extract.py  spice_pdk.py  utils.py
tests/: test_direct_mlp.py  test_direct_mlp_fd_study.py  test_fd_parameter_study.py  test_foundation_emulator.py  test_metrics.py
